--- a/template/Halfway.html
+++ b/template/Halfway.html
@@ -5,10 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <!-- 부트스트랩 CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
         <title>SKHU LOAD</title>
     </head>
     <body>
-        <!-- 네비게이션 바 -->
+        <!-- #region 네비게이션 바 -->
         <!-- 밝은 테마의 네비게이션 바 생성 -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <!-- 네비게이션 바를 감싸는 컨테이너(중앙 정렬, 좌우 여백) -->
@@ -32,12 +33,15 @@
                 </div>
             </div>
         </nav>
+        <!-- #endregion 네비게이션 바 -->
 
+        <!-- #region 헤더 -->
         <header class="jumbotron">
             <div class="container text-center">
                 <h1 class="display-4">Halfwau Point</h1>
                 <p class="lead">아직 기능이 완성되지 않았습니다.</p>
             </div>
         </header>
+        <!-- #endregion 헤더 -->
     </body>
 </html>
