--- a/template/Mapping.html
+++ b/template/Mapping.html
@@ -3,18 +3,14 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="Mapping.css" />
         <!-- 부트스트랩 CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
         <title>SKHU LOAD</title>
-        <style>
-            #map {
-                height: 400px;
-            }
-        </style>
     </head>
     <body>
-        <!-- 네비게이션 바 -->
+        <!-- #region 네비게이션 바 -->
         <!-- 밝은 테마의 네비게이션 바 생성 -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <!-- 네비게이션 바를 감싸는 컨테이너(중앙 정렬, 좌우 여백) -->
@@ -38,13 +34,16 @@
                 </div>
             </div>
         </nav>
+        <!-- #endregion 네비게이션 바 -->
 
+        <!-- #region 헤더 -->
         <header class="jumbotron">
             <div class="container text-center">
                 <h1 class="display-4">Mapping</h1>
                 <p class="lead">아직 기능이 완성되지 않았습니다.</p>
             </div>
         </header>
+        <!-- #endregion 헤더 -->
 
         <div class="container mt-4">
             <div class="row">
@@ -87,10 +86,6 @@
                 });
             }
         </script>
-        <script
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDsmoFLqupsLIZtJGrerrEuNkrnW_8NnCI&callback=initMap"
-            async
-            defer
-        ></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDsmoFLqupsLIZtJGrerrEuNkrnW_8NnCI&callback=initMap" async defer></script>
     </body>
 </html>
