--- a/template/Halfway.html
+++ b/template/Halfway.html
@@ -38,7 +38,7 @@
         <!-- #region 헤더 -->
         <header class="jumbotron">
             <div class="container text-center">
-                <h1 class="display-4">Halfwau Point</h1>
+                <h1 class="display-4">Halfway Point</h1>
                 <p class="lead">아직 기능이 완성되지 않았습니다.</p>
             </div>
         </header>
