만든 사람, 사용 목적, 사용방법 등의 자세한 부분 확인 가능한 페이지 추가

--- a/template/Main.html
+++ b/template/Main.html
@@ -45,7 +45,7 @@
                     <h1 class="display-4">환영합니다!</h1>
                     <p class="lead">성공회대학교 교내대회 출품작 SKHU LOAD(임시)입니다.</p>
                     <!-- 기본 스타일의 가장 큰 버튼 생성 -->
-                    <a class="btn btn-primary btn-lg" href="/" role="button">자세히 알아보기</a>
+                    <a class="btn btn-primary" href="/Detail" role="button">자세히 알아보기</a>
                 </div>
             </div>
         </header>
