--- a/views/Main.ejs
+++ b/views/Main.ejs
@@ -7,34 +7,10 @@
         <!-- 부트스트랩 CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
-        <title>SKHU LOAD</title>
+        <title>SKHU ROAD</title>
     </head>
     <body>
-        <!-- #region 네비게이션 바 -->
-        <!-- 밝은 테마의 네비게이션 바 생성 -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <!-- 네비게이션 바를 감싸는 컨테이너(중앙 정렬, 좌우 여백) -->
-            <div class="container">
-                <!-- 네비게이션 바에 로고 추가 -->
-                <a class="navbar-brand" href="/">{ SKHU LOAD }</a>
-                <!-- 모바일 화면에서 메뉴가 접히도록 설정 -->
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <!-- 오른쪽으로 정렬된 네비게이션 바 메뉴 -->
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="/Mapping">길찾기 알림</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/Halfway">중간지점 찾기</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/Suggestion">장소추천</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <!-- #endregion 네비게이션 바 -->
+        <%- include('./__GNB') %>
 
         <!-- #region 헤더 -->
         <!-- 부트스트랩 점보트론(큰 텍스트, 큰 여백) -->
@@ -43,7 +19,7 @@
             <div class="container">
                 <div class="content_right">
                     <h1 class="display-4">환영합니다!</h1>
-                    <p class="lead">성공회대학교 교내대회 출품작 SKHU LOAD(임시)입니다.</p>
+                    <p class="lead">성공회대학교 교내대회 출품작 SKHU Road(임시)입니다.</p>
                     <!-- 기본 스타일의 가장 큰 버튼 생성 -->
                     <a class="btn btn-primary btn-lg" href="/" role="button">자세히 알아보기</a>
                 </div>
@@ -55,7 +31,7 @@
         <section class="container text-center">
             <br />
             <h2>서비스 소개</h2>
-            <p>SKHU LOAD(임시)에서 지원하는 서비스 목록 입니다.</p>
+            <p>SKHU Road(임시)에서 지원하는 서비스 목록 입니다.</p>
             <br />
         </section>
         <!-- #endregion 서비스 소개 메시지 섹션 -->
@@ -107,44 +83,6 @@
         </section>
         <!-- #endregion 서비스 카드 섹션 -->
 
-        <!-- #region 푸터 -->
-        <!-- 어두운 배경의 밝은 텍스트를 가지는 푸터 생성 -->
-        <footer class="footer bg-dark text-light">
-            <div class="container">
-                <br />
-                <!-- 푸터의 열 생성 -->
-                <div class="row">
-                    <!-- 푸터의 행 생성 -->
-                    <div class="col-md-6">
-                        <h4>SKHU LOAD</h4>
-                        <p>성공회대학교 교내대회 출품작</p>
-                        <p>팀명: 미정</p>
-                        <p>주소: 서울특별시 구로구 연동로 320</p>
-                    </div>
-                    <!-- 푸터의 행 생성 -->
-                    <div class="col-md-3">
-                        <h5>추가 링크</h5>
-                        <!-- 목록 스타일 제거 -->
-                        <ul class="list-unstyled">
-                            <li><a href="#">서비스</a></li>
-                            <li><a href="#">고객 지원</a></li>
-                            <li><a href="#">이용 약관</a></li>
-                        </ul>
-                    </div>
-                    <!-- 푸터의 행 생성 -->
-                    <div class="col-md-3">
-                        <h5>SNS</h5>
-                        <!-- 목록 스타일 제거 -->
-                        <ul class="list-unstyled">
-                            <li><a href="#">Facebook</a></li>
-                            <li><a href="#">Instagram</a></li>
-                            <li><a href="#">GitHub</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <br />
-            </div>
-        </footer>
-        <!-- #endregion 푸터 -->
+        <%- include('./__Footer') %>
     </body>
 </html>
