라우팅 분리 및 중간지점 찾기 기능 추가
 - 세부사항
1. API키를 제대로 가져오지 않던 오류를 수정했습니다.
2. nodemon 사용 시 json파일을 생성하던 코드와 충돌하여 서버가 무한 리로드되던 오류를 수정했습니다.
3. 라우터를 각 페이지별로 분할했습니다. 라우터 파일은 R_{파일명}.js로 router파일에 저장하고 있습니다.
4. 중간지점 찾기 기능을 추가했습니다.
 - 출발지점 입력받을 수 있는 input추가 (갯수 재한 없음)
 - 주소 자동완성 기능 추가
 - 클라이언트의 주소를 서버로 넘겨 지오코딩으로 위도, 경로 변환 및 데이터 가공
 - 지도에 각 지점 표시 및 경로 추가

**주의사항** node-geocoder를 install해야합니다.

--- a/views/Halfway.ejs
+++ b/views/Halfway.ejs
@@ -3,10 +3,12 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="Halfway.css" />
         <!-- 부트스트랩 CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
         <title>SKHU ROAD</title>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDsmoFLqupsLIZtJGrerrEuNkrnW_8NnCI&libraries=places"></script>
     </head>
     <body>
         <%- include('./__GNB') %>
@@ -14,14 +16,46 @@
         <!-- #region 헤더 -->
         <header class="jumbotron">
             <div class="container text-center">
-                <h1 class="display-4">Halfwau Point</h1>
+                <h1 class="display-4">Halfway</h1>
                 <p class="lead">아직 기능이 완성되지 않았습니다.</p>
             </div>
         </header>
         <!-- #endregion 헤더 -->
 
-        <span style="line-height: 1000px"><br /></span>
+        <!-- #region 지도 표시 -->
+        <div class="container mt-4">
+            <div id="map"></div>
+        </div>
+        <!-- #endregion 지도 표시 -->
+
+        <!-- #region 출발지점 입력 및 중간지점 찾기 -->
+        <div class="container mt-4">
+            <div class="form-group">
+                <!-- input 박스를 그룹으로 묶음 -->
+                <div id="address-container">
+                    <div class="input-group mt-2">
+                        <input id="address-input" type="text" class="form-control" name="address[]" placeholder="출발지점을 입력하세요." />
+                        <div class="input-group-append">
+                            <button class="btn btn-danger remove-address" type="button">삭제</button>
+                        </div>
+                    </div>
+                    <div class="input-group mt-2">
+                        <input id="address-input" type="text" class="form-control" name="address[]" placeholder="출발지점을 입력하세요." />
+                        <div class="input-group-append">
+                            <button class="btn btn-danger remove-address" type="button">삭제</button>
+                        </div>
+                    </div>
+                </div>
+                <button class="btn btn-success add-address plus_btn btn-block" type="button">출발지점 추가</button>
+                <button class="btn btn add-address plus_btn btn-block" id="mid_btn" type="button">중간지점 찾기</button>
+            </div>
+        </div>
+        <!-- #endregion 출발지점 입력 및 중간지점 찾기  -->
+
+        <span style="line-height: 300px"><br /></span>
 
         <%- include('./__Footer') %>
+
+        <script src="Halfway.js"></script>
     </body>
 </html>
