--- a/views/Suggestion.ejs
+++ b/views/Suggestion.ejs
@@ -18,10 +18,34 @@
                 <p class="lead">아직 기능이 완성되지 않았습니다.</p>
             </div>
         </header>
-        <!-- #endregion 헤더 -->
 
+        <div class="container mt-4">
+            <div class="form-group">
+                <!-- input 박스를 그룹으로 묶음 -->
+                <div id="address-container">
+                    <div class="input-group mt-2">
+                        <input type="text" class="sug_inputBox" name="address[]" placeholder="원하는 장소를 입력하세요." />
+                        <div class="input-group-append">
+                            <button type="submit" id="sug_btn" style="background-color: blue; color: white;">검색</button>
+                        </div>
+                    </div>
+                    <div id="imageContainer">
+                        <tr></tr>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
         <span style="line-height: 1000px"><br /></span>
 
         <%- include('./__Footer') %>
+        <script src="Suggestion.js">
+
+
+
+
+        </script>
     </body>
+
 </html>
