--- a/views/Mapping.ejs
+++ b/views/Mapping.ejs
@@ -29,7 +29,7 @@
                     <div id="map"></div>
                     <div class="input-group mt-4">
                         <input type="text" class="form-control" name="address" placeholder="위치 검색" />
-                        <button onclick="search()" id="btn" class="btn btn-primary" type="button">검색</button>
+                        <button id="btn" class="btn btn-primary" type="button">검색</button>
                     </div>
                 </div>
             </div>
