Halfway 코드 리팩토링
 - 함수로 분할작업
 - 프로미스, 동기/비동기 작업으로 효율성 증가
 - 부족한 주석 추가
 - input폼 오류 수정

--- a/views/Halfway.ejs
+++ b/views/Halfway.ejs
@@ -58,13 +58,13 @@
                 <!-- input 박스를 그룹으로 묶음 -->
                 <div id="address-container">
                     <div class="input-group mt-2">
-                        <input id="address-input" type="text" class="form-control" name="address[]" placeholder="출발지점을 입력하세요." />
+                        <input id="address-input" type="text" class="form-control" name="address" placeholder="출발지점을 입력하세요." />
                         <div class="input-group-append">
                             <button class="btn btn-danger remove-address" type="button">삭제</button>
                         </div>
                     </div>
                     <div class="input-group mt-2">
-                        <input id="address-input" type="text" class="form-control" name="address[]" placeholder="출발지점을 입력하세요." />
+                        <input id="address-input" type="text" class="form-control" name="address" placeholder="출발지점을 입력하세요." />
                         <div class="input-group-append">
                             <button class="btn btn-danger remove-address" type="button">삭제</button>
                         </div>
@@ -80,6 +80,6 @@
 
         <%- include('./__Footer') %>
 
-        <script src="Halfway.js"></script>
+        <script type="module" src="Halfway.js"></script>
     </body>
 </html>
