중간지점 찾기 기능 추가
 - 지도에 표시되는 경로 중 버스, 지하철 등 정보 표시 on/off 추가
 - 근처 장소를 중간지점으로 설정해 재검색하는 기능 추가

--- a/views/Halfway.ejs
+++ b/views/Halfway.ejs
@@ -22,8 +22,13 @@
         </header>
         <!-- #endregion 헤더 -->
 
-        <!-- #region 상단 필터 -->
         <div class="container">
+            <input id="addressInfoOff" class="btn btn-outline-primary" type="button" value="경로 정보 끄기" />
+            <input id="addressInfoOn" class="btn btn-outline-primary" type="button" value="경로 정보 표시" />
+        </div>
+
+        <!-- #region 상단 필터 -->
+        <div class="container mt-2">
             <div class="flex-container">
                 <div class="flex-item">
                     <button class="btn btn-outline-danger reset-button">초기화</button>
