feat: subway ejs 추가

--- a/views/Main.ejs
+++ b/views/Main.ejs
@@ -79,6 +79,16 @@
                         </div>
                     </div>
                 </div>
+                <div class="jumbotron mx-4 jb_img_right text-end">
+                    <div class="container text_center_800">
+                        <div class="content_left">
+                            <h1>지하철 지연 서비스</h1>
+                            <p>지하철을 타기 전에 지하철 지연정보를 확인해보세요.</p>
+                            <!-- 기본 스타일의 보통 사이즈의 버튼 생성 -->
+                            <a class="btn btn-primary" href="/Subway" role="button">지연정보 이동하기</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- #endregion 서비스 카드 섹션 -->
