--- a/views/__GNB.ejs
+++ b/views/__GNB.ejs
@@ -21,6 +21,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/Suggestion">장소추천</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/Subway">지하철 정보</a>
+                </li>
             </ul>
         </div>
     </div>
