--- a/views/Detail.ejs
+++ b/views/Detail.ejs
@@ -37,24 +37,73 @@
                     <p>#해시테그1</p>
                     <p>#해시테그2</p>
                 </div>
+
                 <div id="mainText1_flex">
                     <div>
-                        <div class="profile_card"></div>
+                        <div class="profile_card">
+                            <div class="gradient_filter"></div>
+                            <img src="ch_img1.jpg" alt="" />
+                            <div class="img_cont">
+                                <h3>김현우 <span>backend</span></h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                <p>skill : html, css, js, node.js</p>
+                            </div>
+                        </div>
                     </div>
                     <div>
-                        <div class="profile_card"></div>
+                        <div class="profile_card">
+                            <div class="gradient_filter"></div>
+                            <img src="ch_img2.jpg" alt="" />
+                            <div class="img_cont">
+                                <h2>김현우 <span>backend</span></h2>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                <p>skill : html, css, js, node.js</p>
+                            </div>
+                        </div>
                     </div>
                     <div>
-                        <div class="profile_card"></div>
+                        <div class="profile_card">
+                            <div class="gradient_filter"></div>
+                            <img src="ch_img3.jpg" alt="" />
+                            <div class="img_cont">
+                                <h2>김현우 <span>backend</span></h2>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                <p>skill : html, css, js, node.js</p>
+                            </div>
+                        </div>
                     </div>
                     <div>
-                        <div class="profile_card"></div>
+                        <div class="profile_card">
+                            <div class="gradient_filter"></div>
+                            <img src="ch_img4.jpg" alt="" />
+                            <div class="img_cont">
+                                <h2>김현우 <span>backend</span></h2>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                <p>skill : html, css, js, node.js</p>
+                            </div>
+                        </div>
                     </div>
                     <div>
-                        <div class="profile_card"></div>
+                        <div class="profile_card">
+                            <div class="gradient_filter"></div>
+                            <img src="ch_img5.png" alt="" />
+                            <div class="img_cont">
+                                <h2>김현우 <span>backend</span></h2>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                <p>skill : html, css, js, node.js</p>
+                            </div>
+                        </div>
                     </div>
                     <div>
-                        <div class="profile_card"></div>
+                        <div class="profile_card">
+                            <div class="gradient_filter"></div>
+                            <img src="ch_img6.jpg" alt="" />
+                            <div class="img_cont">
+                                <h2>김현우 <span>backend</span></h2>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                <p>skill : html, css, js, node.js</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -79,8 +128,8 @@
                     <div class="left_textFrame">
                         <p>제목</p>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos obcaecati quas ex, recusandae harum aperiam perferendis soluta
-                            eos veniam ullam explicabo ipsam repellendus a nesciunt dolor quam fuga debitis. Animi.
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos obcaecati quas ex, recusandae harum aperiam perferendis soluta eos veniam ullam
+                            explicabo ipsam repellendus a nesciunt dolor quam fuga debitis. Animi.
                         </p>
                     </div>
                 </div>
@@ -92,8 +141,8 @@
                     <div class="right_textFrame">
                         <p>제목</p>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos obcaecati quas ex, recusandae harum aperiam perferendis soluta
-                            eos veniam ullam explicabo ipsam repellendus a nesciunt dolor quam fuga debitis. Animi.
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos obcaecati quas ex, recusandae harum aperiam perferendis soluta eos veniam ullam
+                            explicabo ipsam repellendus a nesciunt dolor quam fuga debitis. Animi.
                         </p>
                     </div>
                 </div>
@@ -119,8 +168,8 @@
                     <div class="left_textFrame">
                         <p>제목</p>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos obcaecati quas ex, recusandae harum aperiam perferendis soluta
-                            eos veniam ullam explicabo ipsam repellendus a nesciunt dolor quam fuga debitis. Animi.
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos obcaecati quas ex, recusandae harum aperiam perferendis soluta eos veniam ullam
+                            explicabo ipsam repellendus a nesciunt dolor quam fuga debitis. Animi.
                         </p>
                     </div>
                 </div>
@@ -132,8 +181,8 @@
                     <div class="right_textFrame">
                         <p>제목</p>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos obcaecati quas ex, recusandae harum aperiam perferendis soluta
-                            eos veniam ullam explicabo ipsam repellendus a nesciunt dolor quam fuga debitis. Animi.
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos obcaecati quas ex, recusandae harum aperiam perferendis soluta eos veniam ullam
+                            explicabo ipsam repellendus a nesciunt dolor quam fuga debitis. Animi.
                         </p>
                     </div>
                 </div>
@@ -159,8 +208,8 @@
                     <div class="left_textFrame">
                         <p>제목</p>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos obcaecati quas ex, recusandae harum aperiam perferendis soluta
-                            eos veniam ullam explicabo ipsam repellendus a nesciunt dolor quam fuga debitis. Animi.
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos obcaecati quas ex, recusandae harum aperiam perferendis soluta eos veniam ullam
+                            explicabo ipsam repellendus a nesciunt dolor quam fuga debitis. Animi.
                         </p>
                     </div>
                 </div>
@@ -172,8 +221,8 @@
                     <div class="right_textFrame">
                         <p>제목</p>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos obcaecati quas ex, recusandae harum aperiam perferendis soluta
-                            eos veniam ullam explicabo ipsam repellendus a nesciunt dolor quam fuga debitis. Animi.
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos obcaecati quas ex, recusandae harum aperiam perferendis soluta eos veniam ullam
+                            explicabo ipsam repellendus a nesciunt dolor quam fuga debitis. Animi.
                         </p>
                     </div>
                 </div>
