--- a/views/Detail.ejs
+++ b/views/Detail.ejs
@@ -46,7 +46,6 @@
                             <div class="img_cont">
                                 <h3>김현우 <span>backend</span></h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                <p>skill : html, css, js, node.js</p>
                             </div>
                         </div>
                     </div>
@@ -55,9 +54,8 @@
                             <div class="gradient_filter"></div>
                             <img src="ch_img2.jpg" alt="" />
                             <div class="img_cont">
-                                <h2>김현우 <span>backend</span></h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                <p>skill : html, css, js, node.js</p>
+                                <h2>김민서 <span>backend</span></h2>
+                                <p>Lorem ipsum dolor sit amet consectetur</p>
                             </div>
                         </div>
                     </div>
@@ -66,9 +64,8 @@
                             <div class="gradient_filter"></div>
                             <img src="ch_img3.jpg" alt="" />
                             <div class="img_cont">
-                                <h2>김현우 <span>backend</span></h2>
+                                <h2>강우혁 <span>backend</span></h2>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                <p>skill : html, css, js, node.js</p>
                             </div>
                         </div>
                     </div>
@@ -77,9 +74,8 @@
                             <div class="gradient_filter"></div>
                             <img src="ch_img4.jpg" alt="" />
                             <div class="img_cont">
-                                <h2>김현우 <span>backend</span></h2>
+                                <h2>박동준 <span>backend</span></h2>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                <p>skill : html, css, js, node.js</p>
                             </div>
                         </div>
                     </div>
@@ -88,9 +84,8 @@
                             <div class="gradient_filter"></div>
                             <img src="ch_img5.png" alt="" />
                             <div class="img_cont">
-                                <h2>김현우 <span>backend</span></h2>
+                                <h2>황재현 <span>backend</span></h2>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                <p>skill : html, css, js, node.js</p>
                             </div>
                         </div>
                     </div>
@@ -99,9 +94,8 @@
                             <div class="gradient_filter"></div>
                             <img src="ch_img6.jpg" alt="" />
                             <div class="img_cont">
-                                <h2>김현우 <span>backend</span></h2>
+                                <h2>최준혁 <span>backend</span></h2>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                <p>skill : html, css, js, node.js</p>
                             </div>
                         </div>
                     </div>
