--- a/static/css/Main.css
+++ b/static/css/Main.css
@@ -1,85 +1,61 @@
-/* 가로 폭이 850px 보다 작을때 실행 */
-@media (max-width: 850px) {
-    /* 서비스 소개 카드 컨테이너 내부 요소 중앙 정렬 */
-    .text_center_800 {
-        text-align: center;
-    }
-
-    /* 서비스 소개 카드 이미지 그라데이션(Top) */
-    .jb_img_left {
-        background: linear-gradient(
-                to top,
-                rgba(226, 226, 226, 0) 5%,
-                rgba(226, 226, 226, 0.25) 15%,
-                rgba(226, 226, 226, 0.5) 30%,
-                rgba(226, 226, 226, 0.75) 50%,
-                rgb(226, 226, 226) 100%
-            ),
-            url(Main_GoogleMap_img.PNG);
-    }
-
-    /* 서비스 소개 카드 이미지 그라데이션(Top) */
-    .jb_img_right {
-        background: linear-gradient(
-                to top,
-                rgba(226, 226, 226, 0) 5%,
-                rgba(226, 226, 226, 0.25) 15%,
-                rgba(226, 226, 226, 0.5) 30%,
-                rgba(226, 226, 226, 0.75) 50%,
-                rgb(226, 226, 226) 100%
-            ),
-            url(Main_GoogleMap_img.PNG);
-    }
+body{
+    margin: 0;
+}
+#map {
+    position: relative;
+    z-index: -1;
+    width: 100vw;
+    height: 100vh;
+    overflow: scroll;
 }
 
-/* 가로 폭이 850px 보다 클때 실행 */
-@media (min-width: 850px) {
-    /* 서비스 소개 카드 이미지 그라데이션(left) */
-    .jb_img_left {
-        background: linear-gradient(
-                to left,
-                rgba(226, 226, 226, 0) 5%,
-                rgba(226, 226, 226, 0.25) 15%,
-                rgba(226, 226, 226, 0.5) 30%,
-                rgba(226, 226, 226, 0.75) 50%,
-                rgb(226, 226, 226) 100%
-            ),
-            url(Main_GoogleMap_img.PNG);
-    }
+/* menu 영역 */
+.menu {
+    float: left;
+    z-index: 7;
+    background-color: #FFFFFF;
+    box-shadow: 0 0 10px 2px gray;
+    height: 100vh;
+    width: 30%;
+    margin-right: -30%;
+    text-align: center;
+    display: inline-block;
 
-    /* 서비스 소개 카드 이미지 그라데이션(right) */
-    .jb_img_right {
-        background: linear-gradient(
-                to right,
-                rgba(226, 226, 226, 0) 5%,
-                rgba(226, 226, 226, 0.25) 15%,
-                rgba(226, 226, 226, 0.5) 30%,
-                rgba(226, 226, 226, 0.75) 50%,
-                rgb(226, 226, 226) 100%
-            ),
-            url(Main_GoogleMap_img.PNG);
-    }
-
-    /* content내부 요소 왼쪽으로 3rem 이동 */
-    .content_left {
-        padding-right: 3rem;
-    }
-
-    /* content내부 요소 오른쪽으로 3rem 이동 */
-    .content_right {
-        padding-left: 3rem;
-    }
+    /* animation: all 0.5s ease; */
 }
 
-/* 가로 폭이 1450px 보다 클때 실행 */
-@media (min-width: 1450px) {
-    /* content내부 요소 왼쪽으로 10rem 이동 */
-    .content_left {
-        padding-right: 10rem;
-    }
-
-    /* content내부 요소 오른쪽으로 10rem 이동 */
-    .content_right {
-        padding-left: 10rem;
-    }
+.header-bar{
+    position: relative;
+    color: #888FC9;
+    display: inline-block;
+    
+    font-size: 3vw;
+    margin: 4%;
+}
+/* menu 내 {길찾기} {중간지점} {장소추천} {지하철} 선택 사항 */
+.nav-opt{
+    background-color: #EEEEEE;
+    color: #707070;
+    font-size: 130%;
+    height: 3%;
+    display: inline-block;
+    float: left;
+    margin-left: 2%;
+    padding: 1.5% 2.75%;
+    border-radius: 10px;
+}
+.con-oth{
+    /* border: 1px black solid; */
+    float: right;
+    margin: 1% 3% 0 0;
+}
+.nav-opt-other{
+    background-color: #EEEEEE;
+    color: #707070;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 25px;
+    width: 25px;
+    border-radius: 100%;
 }
