--- a/static/css/Main.css
+++ b/static/css/Main.css
@@ -3,7 +3,7 @@ body{
 }
 #map {
     position: relative;
-    z-index: -1;
+    /* z-index: 0; */
     width: 100vw;
     height: 100vh;
     overflow: scroll;
@@ -11,17 +11,19 @@ body{
 
 /* menu 영역 */
 .menu {
-    float: left;
-    z-index: 7;
+    /* float: left; */
+    z-index: 1;
+    top: 0;
+    left: 0;
+    position: absolute;
     background-color: #FFFFFF;
     box-shadow: 0 0 10px 2px gray;
     height: 100vh;
     width: 30%;
-    margin-right: -30%;
     text-align: center;
     display: inline-block;
 
-    /* animation: all 0.5s ease; */
+    animation: all 0.5s ease;
 }
 
 .header-bar{
@@ -30,6 +32,7 @@ body{
     display: inline-block;
     
     font-size: 3vw;
+    font-weight: bold;
     margin: 4%;
 }
 /* menu 내 {길찾기} {중간지점} {장소추천} {지하철} 선택 사항 */
@@ -43,6 +46,7 @@ body{
     margin-left: 2%;
     padding: 1.5% 2.75%;
     border-radius: 10px;
+    cursor: pointer;
 }
 .con-oth{
     /* border: 1px black solid; */
@@ -58,4 +62,43 @@ body{
     height: 25px;
     width: 25px;
     border-radius: 100%;
+    cursor: pointer;
+}
+.nav-opt:hover, .nav-opt-other:hover{
+    background-color: #BBBBBB;
+    color: #505050;
+    transition: 0.3s;
+    cursor: pointer;
+}
+
+.folding-btn {
+    z-index: 2;
+    position: absolute;
+    top: 45vh;
+    left: 30vw;
+
+    height: 10%;
+    width: 5%;
+
+    border-radius: 0 10px 10px 0;
+    box-shadow: 5px 0 10px 0 gray;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background-color: #ffffff;
+}
+
+.folding-btn div{
+    
+    height: 50%;
+    margin-left: -20%;
+    width: 30%;
+
+    background-color: #EEEEEE;
+}
+
+.search-bar{
+    text-align: center;
 }
