기능 구현(사이드 토글)

--- a/views/Main.ejs
+++ b/views/Main.ejs
@@ -9,9 +9,9 @@
     </head>
     <body>
         <section class="menu">
-            <div class="folding-btn">
+            <button class="folding-btn">
                 <div></div>
-            </div>
+            </button>
             <header class="header-bar">
                 { SKHU ROAD }
             </header>
@@ -37,5 +37,5 @@
         </section>
         <div id="map"></div>
     </body>
-    <script type="module" src="../static/javascript/Main.js"></script>
+    <script src="Main.js"></script>
 </html>
