--- a/static/css/Main.css
+++ b/static/css/Main.css
@@ -22,7 +22,7 @@ body{
     width: 30%;
     text-align: center;
     display: inline-block;
-
+    transition: transform 0.3s; /* 애니메이션을 추가할 수 있습니다. */
     animation: all 0.5s ease;
 }
 
@@ -30,7 +30,7 @@ body{
     position: relative;
     color: #888FC9;
     display: inline-block;
-    
+
     font-size: 3vw;
     font-weight: bold;
     margin: 4%;
@@ -91,7 +91,7 @@ body{
 }
 
 .folding-btn div{
-    
+
     height: 50%;
     margin-left: -20%;
     width: 30%;
@@ -102,3 +102,12 @@ body{
 .search-bar{
     text-align: center;
 }
+
+
+/* Main.css */
+
+
+  /* hidden 클래스를 추가하면 메뉴가 왼쪽으로 이동하여 숨깁니다. */
+  .menu.hidden {
+    transform: translateX(-100%);
+  }
