--- a/views/Main.ejs
+++ b/views/Main.ejs
@@ -9,24 +9,60 @@
     </head>
     <body>
         <section class="menu">
-            <button class="folding-btn">
+            <div class="folding-btn">
                 <div></div>
-            </button>
+            </div>
             <header class="header-bar">
                 { SKHU ROAD }
             </header>
-            <nav>
-                <div class="nav-opt">길찾기</div>
-                <div class="nav-opt">중간지점</div>
-                <div class="nav-opt">장소추천</div>
-                <div class="nav-opt">지하철</div>
+            <nav class="con-nav">
+                <div class="nav-opt">
+                    <table>
+                        <td>
+                            <img class="opt-icon" src="opticon1.svg" alt="1">
+                        </td>
+                    </table>
+                    <br>
+                    길찾기
+                </div>
+                <div class="nav-opt">
+                    <table>
+                        <td>
+                            <img class="opt-icon" src="opticon2.svg" alt="1">
+                        </td>
+                    </table>
+                    <br>
+                    중간지점
+                </div>
+                <div class="nav-opt">
+                    <table>
+                        <td>
+                            <img class="opt-icon" src="opticon3.svg" alt="1">
+                        </td>
+                    </table>
+                    <br>
+                    장소추천
+                </div>
+                <div class="nav-opt">
+                    <table>
+                        <td>
+                            <img class="opt-icon" src="opticon4.svg" alt="1">
+                        </td>
+                    </table>
+                    <br>
+                    지하철
+                </div>
                 <table class="con-oth">
+                    <tr>
                     <td>
                         <div class="nav-opt-other">i</div>
                     </td>
+                    </tr>
+                    <tr>
                     <td>
                         <div class="nav-opt-other">?</div>
                     </td>
+                </tr>
                 </table>
             </nav>
             <main class="con-main">
