--- a/static/css/Main.css
+++ b/static/css/Main.css
@@ -19,7 +19,7 @@ body{
     background-color: #FFFFFF;
     box-shadow: 0 0 10px 2px gray;
     height: 100vh;
-    width: 30%;
+    width: 450px;
     text-align: center;
     display: inline-block;
     transition: transform 0.3s; /* 애니메이션을 추가할 수 있습니다. */
@@ -31,27 +31,41 @@ body{
     color: #888FC9;
     display: inline-block;
 
-    font-size: 3vw;
+    font-size: 50px;
     font-weight: bold;
-    margin: 4%;
+    margin: 10px;
+}
+.con-nav {
+    height: 70px;
+    margin-bottom: 10px;
 }
 /* menu 내 {길찾기} {중간지점} {장소추천} {지하철} 선택 사항 */
 .nav-opt{
     background-color: #EEEEEE;
     color: #707070;
-    font-size: 130%;
-    height: 3%;
+    font-size: 14px;
+    /* height: 66px; */
+    /* width: 60px; */
     display: inline-block;
     float: left;
-    margin-left: 2%;
-    padding: 1.5% 2.75%;
+    margin-left: 10px;
+    padding: 4px 8px;
     border-radius: 10px;
     cursor: pointer;
 }
+.nav-opt table {
+    height: 30px;
+    margin-top: 7px;
+    margin-bottom: -8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .con-oth{
     /* border: 1px black solid; */
+    display: inline-block;
+    margin-right: 6px;
     float: right;
-    margin: 1% 3% 0 0;
 }
 .nav-opt-other{
     background-color: #EEEEEE;
@@ -75,10 +89,10 @@ body{
     z-index: 2;
     position: absolute;
     top: 45vh;
-    left: 30vw;
+    left: 450px;
 
-    height: 10%;
-    width: 5%;
+    height: 100px;
+    width: 20px;
 
     border-radius: 0 10px 10px 0;
     box-shadow: 5px 0 10px 0 gray;
@@ -92,17 +106,12 @@ body{
 
 .folding-btn div{
 
-    height: 50%;
-    margin-left: -20%;
-    width: 30%;
+    height: 50px;
+    margin-left: -5px;
+    width: 5px;
 
     background-color: #EEEEEE;
 }
-
-.search-bar{
-    text-align: center;
-}
-
 
 /* Main.css */
 
