--- a/views/Main.ejs
+++ b/views/Main.ejs
@@ -65,13 +65,10 @@
                 </tr>
                 </table>
             </nav>
-            <main class="con-main">
-                <header class="search-bar">
-                    <input type="text" placeholder="위치 검색">
-                </header>
-            </main>
+            <%- include('./__Mapping') %>
         </section>
         <div id="map"></div>
+        <!-- <%- include('./__Help') %> -->
     </body>
     <script src="Main.js"></script>
 </html>
