--- a/views/Main.ejs
+++ b/views/Main.ejs
@@ -14,6 +14,7 @@
             </div>
             <header class="header-bar">
                 { SKHU ROAD }
+                <div class="header-hr"></div>
             </header>
             <nav class="con-nav">
                 <div class="nav-opt">
@@ -33,15 +34,6 @@
                     </table>
                     <br>
                     중간지점
-                </div>
-                <div class="nav-opt">
-                    <table>
-                        <td>
-                            <img class="opt-icon" src="opticon3.svg" alt="1">
-                        </td>
-                    </table>
-                    <br>
-                    장소추천
                 </div>
                 <div class="nav-opt">
                     <table>
