--- a/static/css/Main.css
+++ b/static/css/Main.css
@@ -1,6 +1,13 @@
 body{
     margin: 0;
+
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -o-user-select: none;  
+    user-select: none;
 }
+
 #map {
     position: relative;
     /* z-index: 0; */
@@ -10,6 +17,12 @@ body{
 }
 input {
     outline: none;
+
+    -webkit-user-select: text;
+    -khtml-user-select: text;
+    -moz-user-select: text;
+    -o-user-select: text;  
+    user-select: text;
 }
 /* menu 영역 */
 .menu {
@@ -30,12 +43,19 @@ input {
 
 .header-bar{
     position: relative;
-    color: #888FC9;
+    color: #8591ff;
     display: inline-block;
 
     font-size: 50px;
     font-weight: bold;
     margin: 10px;
+}
+.header-hr{
+    background-color: #8591ff;
+
+    margin-top: -5px;
+    border-radius: 2px;
+    height: 2px;
 }
 .con-nav {
     height: 70px;
@@ -43,14 +63,14 @@ input {
 }
 /* menu 내 {길찾기} {중간지점} {장소추천} {지하철} 선택 사항 */
 .nav-opt{
-    background-color: #EEEEEE;
-    color: #707070;
+    background-color: #b5b9ff;
+    color: white;
     font-size: 14px;
     /* height: 66px; */
     /* width: 60px; */
     display: inline-block;
     float: left;
-    margin-left: 10px;
+    margin-left: 20px;
     padding: 4px 8px;
     border-radius: 10px;
     cursor: pointer;
@@ -70,8 +90,8 @@ input {
     float: right;
 }
 .nav-opt-other{
-    background-color: #EEEEEE;
-    color: #707070;
+    background-color: #b5b9ff;
+    color: white;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -81,8 +101,7 @@ input {
     cursor: pointer;
 }
 .nav-opt:hover, .nav-opt-other:hover{
-    background-color: #BBBBBB;
-    color: #505050;
+    background-color: #8591ff;
     transition: 0.3s;
     cursor: pointer;
 }
@@ -105,7 +124,9 @@ input {
 
     background-color: #ffffff;
 }
-
+.folding-btn:hover {
+    cursor: pointer;
+}
 .folding-btn div{
 
     height: 50px;
