--- a/views/__Mapping.ejs
+++ b/views/__Mapping.ejs
@@ -2,8 +2,10 @@
     <header class="search-bar">
         <div class="con-search">
             <img class="searchIcon" src="searchIcon.svg" alt="">
-            <input class="search-input" type="text" placeholder="위치 검색">
+            <input class="search-input" type="text" class="form-control" name="address" placeholder="위치 검색">
+            <img id="reset-button" class="xMark" src="xMark.svg" alt="" type="reset">
         </div>
-        <img class="xMark" src="xMark.svg" alt="" type="reset">
+        <button id="btn" class="btn btn-primary" type="button">검색</button>
     </header>
 </main>
+<script src="Mapping.js"></script>
