--- a/static/css/Main.css
+++ b/static/css/Main.css
@@ -155,10 +155,11 @@ input {
     background-color: #EEEEEE;
     /* border-radius: 10px; */
 
+    margin-top: 2px;
     margin-right: 10px;
 
     height: 40px;
-    width: 300px;
+    width: 250px;
     
     font-size: 20px;
 
@@ -181,7 +182,7 @@ input {
   }
   .xMark{
     width: 25px;
-    margin: 8.5px;
+    margin: 8.5px 15px;
   }
   .xMark:hover{
     cursor: pointer;
