--- a/views/Main.ejs
+++ b/views/Main.ejs
@@ -57,7 +57,9 @@
                 </tr>
                 </table>
             </nav>
-            <%- include('./__Mapping') %>
+            <div class="mapping-section">
+                <%- include('./__Mapping') %>
+            </div>
         </section>
         <div id="map"></div>
     </body>
