--- a/views/__Mapping.ejs
+++ b/views/__Mapping.ejs
@@ -5,7 +5,7 @@
             <input class="search-input" type="text" class="form-control" name="address" placeholder="위치 검색">
             <img id="reset-button" class="xMark" src="xMark.svg" alt="" type="reset">
         </div>
-        <button id="btn" class="btn btn-primary" type="button">검색</button>
+        <button id="btn" class="search-btn" type="button">검색</button>
     </header>
 </main>
 <script src="Mapping.js"></script>
