--- a/views/Main.ejs
+++ b/views/Main.ejs
@@ -17,7 +17,7 @@
                 <div class="header-hr"></div>
             </header>
             <nav class="con-nav">
-                <div class="nav-opt">
+                <div class="nav-opt on">
                     <table>
                         <td>
                             <img class="opt-icon" src="opticon1.svg" id="gotoMappingBtn">
@@ -52,13 +52,19 @@
                     </tr>
                     <tr>
                     <td>
-                        <div class="nav-opt-other">?</div>
+                        <div class="nav-opt-other" id="helpBtn">?</div>
                     </td>
                 </tr>
                 </table>
             </nav>
             <div class="mapping-section">
                 <%- include('./__Mapping') %>
+            </div>
+            <div class="halfway-section hidden">
+                <%- include('./__Halfway') %>
+            </div>
+            <div class="subway-section hidden">
+                <%- include('./__Subway') %>
             </div>
         </section>
         <div id="map"></div>
